# typed-dialogflow

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  model.rs
