[package]
name = "typed-dialogflow"
version = "0.1.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
license = "MIT OR Apache-2.0"
description = "An easy-to-use typed Google Dialogflow client"
repository = "https://github.com/edgarogh/typed-dialogflow"
keywords = ["dialogflow", "google", "gcp", "nlp", "natural-language-processing", "text-processing"]
categories = ["api-bindings", "text-processing"]
exclude = ["tests"]
edition = "2021"

[dependencies]
gcp_auth = "0.7"
language-tags = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Integration tests are no checked into git, as there isn't any easy reproducible way to run them anyways as they run
# against an authenticated private service. But I have them locally, hence these two lines.
[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
